air-quality-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air-quality-api
  labels:
    app: air-quality-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: air-quality-api
  template:
    metadata:
      labels:
        app: air-quality-api
    spec:
      serviceAccountName: air-quality-api
      containers:
        - name: air-quality-api
          image: 918780499156.dkr.ecr.eu-west-1.amazonaws.com/air-quality-platform:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
