air-quality-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality-api
  labels:
    app: air-quality-api
spec:
  type: ClusterIP
  selector:
    app: air-quality-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
