air-quality-api/base/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: air-quality-api
  annotations:
    # Group name is overridden per overlay for one ALB per environment.
    alb.ingress.kubernetes.io/group.name: platform-prod
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:918780499156:certificate/6e86af97-bc57-4bca-9615-f44b0571b870
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    external-dns.alpha.kubernetes.io/hostname: origin-air-quality.cloud-master-ai.com

    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
    - host: origin-air-quality.cloud-master-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: air-quality-api
                port:
                  number: 80
